--- a/index.html
+++ b/index.html
@@ -51,18 +51,22 @@
   </header>
 
   <!-- Content -->
+  
 
   <div id="main">
     <div class="container">
-      <div class="row">
-        <div class="pull-right">
-          <div class="col-md-12">
-            <form id="search">
-              <input type="search" placeholder="search..." style="text-align: center;">
-            </form>
-          </div>
-        </div>
+    <div class="col-md-12">  
+      
+    </div>
+    </div>
+    <div class="container">
+      <!-- <div class="row"> -->
+      <div class="text-center">
+        <form id="search">
+          <input type="search" placeholder="search..." style="text-align: center;">
+        </form>
       </div>
+      <!-- </div> -->
       
       <div id="slides">    
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
